<resources>
    <string name="app_name">MetaClops</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="api">https://metaclops.in/api/</string>
    <string name="image_api">https://metaclops.in/uploads/image/</string>
    <string name="Rs" formatted="false" translatable="true">\u20B9</string>
    <string name="facebook_app_id">337567401407789</string>
    <string name="fb_login_protocol_scheme">fb337567401407789</string>
    <string name="admob_app_id">ca-app-pub-9075538864410208~4461078860</string>
    <string name="admob_baner">ca-app-pub-9075538864410208/5255285789</string>
    <string name="admob_reward">ca-app-pub-3940256099942544/5224354917</string>
    <string name="already_login">Already register?Login Now</string>
    <string name="payment_method_not_available">Payment method not available</string>
    <string name="amount_bracket">Amount</string>
    <string name="error">Error!</string>
    <string name="enter_minmum">Enter minimum </string>
    <string name="ok">OK</string>
    <string name="please_update_profile_with_email">Please update profile with email.</string>
    <string name="please_enter_card_number">Please enter card number</string>
    <string name="please_enter_cvv">Please enter CVV</string>
    <string name="please_enter_expiry_month">Please enter expiry month</string>
    <string name="please_enter_expiry_year">Please enter expiry year</string>
    <string name="please_update_profile_with_email_and_mobile_number">Please update profile with email and mobile number.</string>
    <string name="please_update_profile_with_mobile_number">Please update profile with mobile number.</string>
    <string name="google_pay_not_installed">Google Pay not installed.</string>
    <string name="payment_transaction_failed">Payment Transaction Failed </string>
    <string name="pay_for_">Pay for </string>
    <string name="_wallet"> wallet</string>
    <string name="cancel">Cancel</string>
    <string name="invalid">Invalid</string>
    <string name="payment_cancelled">Payment cancelled</string>
    <string name="you_will_get_">You will get </string>
    <string name="you_will_pay_">You will pay </string>
    <string name="downloading...">Downloading...</string>
    <string name="permission_needed">Permission needed</string>
    <string name="this_permission_is_needed_because_of_download_the_latest_version_of_">This permission is needed because of download the latest version of </string>
    <string name="updating...">Updating....</string>
    <string name="download_completed">Download Completed</string>
    <string name="storage_permission_denied">Storage Permission DENIED</string>
    <string name="permission_granted">Permission GRANTED</string>
    <string name="install_permission_denied">Install Permission DENIED</string>
    <string name="app_not_found_in_download">App not found in download</string>
    <string name="username_required...">Username required...</string>
    <string name="no_space_allowed">No Space Allowed</string>
    <string name="please_select_country_code">Please select country code</string>
    <string name="mobile_number_required...">Mobile number required...</string>
    <string name="wrong_mobile_number...">Wrong mobile number...</string>
    <string name="email_required...">Email required...</string>
    <string name="wrong_email_address...">Wrong email address...</string>
    <string name="please_select_country">Please select country</string>
    <string name="password_required...">Password required...</string>
    <string name="retype_your_password...">Retype your password...</string>
    <string name="password_not_matched...">Password not matched...</string>
    <string name="otp_send_successfully">OTP send successfully</string>
    <string name="failed">Failed</string>
    <string name="registration_successfully">Registration Successfully</string>
    <string name="address__">Address : </string>
    <string name="additional__">Additional information : </string>
    <string name="phone__">Phone : </string>
    <string name="email__">Email : </string>
    <string name="instagram__">Instagram : </string>
    <string name="street__">Street : </string>
    <string name="time__">Time : </string>
    <string name="send_mail...">Send mail...</string>
    <string name="there_are_no_email_apps_installed">There are no email apps installed.</string>
    <string name="whatsapp_not_found">WhatsApp not found</string>
    <string name="your_account_is_blocked_by_admin">Your account is blocked by admin</string>
    <string name="new_update_available">New update available...</string>
    <string name="later">Later</string>
    <string name="update_now">Update Now</string>
    <string name="announcement">Announcement :</string>
    <string name="currently_app_server_is_under_maintanance">Currently app server is under maintanance.</string>
    <string name="exit">Exit</string>
    <string name="wrong_otp">Wrong OTP.</string>
    <string name="resend">Resend</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="retype_new_password">Retype New Password</string>
    <string name="password_not_match">Password Not Match</string>
    <string name="earn">Earn</string>
    <string name="play">Play</string>
    <string name="account">Account</string>
    <string name="press_again_to_exit">Press again to exit</string>
    <string name="_name"> Name</string>
    <string name="your_current_balance__">Your Current Balance : </string>
    <string name="match_entry_fee_per_person__">Match Entry Fee Per Person : </string>
    <string name="total_payable_amount__">Total Payable Amount : </string>
    <string name="add_info">Add info</string>
    <string name="player_name_required">Player name required</string>
    <string name="team_">Team </string>
    <string name="please_enter_player_name">Please enter player name</string>
    <string name="please_enter_unique_player_name">Please enter unique Player name</string>
    <string name="ONGOING">ONGOING</string>
    <string name="RESULTS">RESULTS</string>
    <string name="forgot_password__reset_now">Forgot Password? Reset Now</string>
    <string name="mobile_number_successfully_verified">Mobile number successfully verified</string>
    <string name="login_successfully">Login Successfully</string>
    <string name="we_will_sent_you_otp_in_">We will sent you OTP in </string>
    <string name="verified">Verified</string>
    <string name="verify">Verify</string>
    <string name="please_verify_mobile_number">Please verify mobile number</string>
    <string name="select_country">Select country</string>
    <string name="enter_password">Enter Password</string>
    <string name="referrals">Referrals</string>
    <string name="earnings">Earnings</string>
    <string name="rewards">Rewards</string>
    <string name="win_money">Win money : </string>
    <string name="join_money">Join money : </string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="please_enter_your_address">Please enter your address</string>
    <string name="promo_code">Promo Code</string>
    <string name="promo_code_copied_successfully">Promo Code Copied Successfully</string>
    <string name="referral_code">Referral Code</string>
    <string name="share_using">Share using</string>
    <string name="ongoing">ONGOING</string>
    <string name="upcoming">UPCOMING</string>
    <string name="results">RESULTS</string>
    <string name="description">Description</string>
    <string name="joined_member">Joined Member</string>
    <string name="register">REGISTER</string>
    <string name="registered">REGISTERED</string>
    <string name="full">FULL</string>
    <string name="you_are_already_registered">You are already registered.</string>
    <string name="organised_on">Organised on</string>
    <string name="match">Match</string>
    <string name="winning_prize">Winning Prize</string>
    <string name="per_kill">Per Kill</string>
    <string name="entry_fee">Entry Fee</string>
    <string name="match_full">Match Full</string>
    <string name="already_joined">Already joined</string>
    <string name="spectate">SPECTATE</string>
    <string name="please_select_any_position">Please select any position</string>
    <string name="you_can_select_only">You can select only</string>
    <string name="spot_in_solo.">spot in Solo.</string>
    <string name="spot_in_duo.">spot in Duo.</string>
    <string name="spot_in_squad.">spot in Squad.</string>
    <string name="spot_in_squad5.">spot in Squad5.</string>
    <string name="transaction_id">Transaction ID</string>
    <string name="transaction_amount_is">Transaction amount is</string>
    <string name="please_wait">Please wait</string>
    <string name="task_completed">Task Completed</string>
    <string name="watch_now">WATCH NOW</string>
    <string name="unable_to_load_video">No video task available for you</string>
    <string name="withdraw_method_not_available">Withdraw method not available</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
    <string name="upi_id">UPI Id</string>
    <string name="withdraw_to_">Withdraw to </string>
    <string name="please_enter_mobile_number">Please enter mobile number</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="please_enter_upi_id">Please enter UPI Id</string>
    <string name="success">Succes!</string>
    <string name="PRIZE_POOL">PRIZE POOL</string>
    <string name="PER_KILL">PER KILL</string>
    <string name="NOT_JOINED">NOT JOINED</string>
    <string name="JOINED">JOINED</string>
    <string name="lottery">Lottery</string>
    <string name="won_prize__">Won prize : </string>
    <string name="draw_on">Draw On</string>
    <string name="won_by">Won by</string>
    <string name="MATCH_FULL">MATCH FULL</string>
    <string name="you_are_already_joined">You are already joined</string>
    <string name="debit">DEBIT</string>
    <string name="credit">CREDIT</string>
    <string name="pending">Pending</string>
    <string name="price__">Price : </string>
    <string name="result_on">Result On</string>
    <string name="play_for">Play for</string>
    <string name="fees">Fees</string>
    <string name="winner">Winner</string>
    <string name="PAID">PAID</string>
    <string name="FREE">FREE</string>
    <string name="room_id">Room ID</string>
    <string name="room_id_copied_successfully">Room ID Copied Successfully</string>
    <string name="room_password">Room Password</string>
    <string name="room_password_copied_successfully">Room Password Copied Successfully</string>
    <string name="edit_playername">Edit Playername</string>
    <string name="save">Save</string>
    <string name="version">Version</string>
    <string name="log_out_successfully">Log out Successfully</string>
    <string name="match_available_">Matches  available: </string>
    <string name="no_announcement_available">No announcement available</string>
    <string name="code">Code</string>
    <string name="mobile">Mobile *</string>
    <string name="LOGIN">LOGIN</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="already_a_user">Already a user?</string>
    <string name="team">Team</string>
    <string name="position">Position</string>
    <string name="player_name">Player Name</string>
    <string name="my_referrals_list">MY REFERRALS LIST</string>
    <string name="date">Date</string>
    <string name="my_reward">My Rewards</string>
    <string name="my_rewards_summary">MY REWARDS SUMMARY</string>
    <string name="no_rewards_yet">No Rewards Yet.</string>
    <string name="kills">Kills</string>
    <string name="winning">Winning</string>
    <string name="home">Home</string>
    <string name="your_transaction_is_fail">Your transaction is fail.</string>
    <string name="submit">SUBMIT</string>
</resources>