<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.egamez.org.ui.activities.TransactionFailActivity">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginBottom="40dp"
        android:src="@drawable/fail_icon" />

    <com.egamez.org.widget.CustomTextView
        android:id="@+id/failtid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/transaction_id"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/newblack"
        app:fontTextStyle="4" />

    <com.egamez.org.widget.CustomTextView
        android:id="@+id/failtamount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/transaction_amount_is"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/newblack"
        app:fontTextStyle="3" />

    <com.egamez.org.widget.CustomTextView
        android:id="@+id/failtstatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/your_transaction_is_fail"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/newblack"
        app:fontTextStyle="3" />


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        app:cardCornerRadius="5dp"
        app:cardUseCompatPadding="true">

        <com.egamez.org.widget.CustomButton
            android:id="@+id/failthome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/newgreen"
            android:paddingTop="5dp"
            android:text="@string/home"
            android:textColor="@color/white"
            app:fontTextStyle="4" />
    </androidx.cardview.widget.CardView>


</LinearLayout>