<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >

        <TextView
            android:id="@+id/jointeam"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/team"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/newblack"
            />

        <TextView
            android:id="@+id/joinposition"
            android:layout_width="100dp"

            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/position"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/newblack"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
        <TextView
            android:id="@+id/joinpubgname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner"
            android:gravity="center"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:text="@string/add_info"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/white"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>