<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="0dp">

    <TextView
        android:id="@+id/no"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="#"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/newblack"
        />

    <TextView
        android:id="@+id/pname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/player_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/newblack"
        />

    <TextView
        android:id="@+id/kills"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/kills"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/newblack"
        />

    <TextView
        android:id="@+id/wining"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/winning"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/newblack"
        />
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DADADA" />
</LinearLayout>