<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.egamez.org.ui.activities.IndroductionActivity">


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pagerinintro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="125dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-125dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/layoutDots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="-20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="-20dp"
            android:gravity="center"
            android:orientation="horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="0dp"
            android:orientation="horizontal">

            <com.egamez.org.widget.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dont_have_an_account"
                android:textColor="@color/black"
                android:textSize="14dp"
                app:fontTextStyle="3" />

            <com.egamez.org.widget.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_a_user"
                android:textColor="@color/black"
                android:textSize="14dp"
                app:fontTextStyle="3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="0dp"
            android:orientation="horizontal">

            <com.egamez.org.widget.CustomTextView
                android:id="@+id/btn_skip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/register"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/newblue"
                app:fontTextStyle="4" />

            <com.egamez.org.widget.CustomTextView
                android:id="@+id/btn_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/LOGIN"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/newblue"
                app:fontTextStyle="4" />

        </LinearLayout>


    </LinearLayout>


</LinearLayout>