<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="320dp"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColorHint="@color/newblack">

            <TextView
                android:id="@+id/countrycodespinnerem"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:background="?attr/editTextBackground"
                android:drawableRight="@drawable/spinner_arrow"
                android:drawablePadding="5dp"
                android:gravity="center"
                android:hint="@string/code"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/newblack"
                android:textColorHint="@color/newblack" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColorHint="@color/newblack">

            <EditText
                android:id="@+id/em_mobilenumber"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/mobile"
                android:inputType="phone"
                android:maxLines="1"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/newblack"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/firstpromoTil"
        android:visibility="gone">

        <EditText
            android:id="@+id/first_promocode"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/referral_code"
            android:maxLines="1"
            android:singleLine="true"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="5dp"
        android:layout_marginTop="5dp"
        app:cardUseCompatPadding="true">

        <Button
            android:id="@+id/em_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/newgreen"
            android:gravity="center"
            android:paddingTop="5dp"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

</LinearLayout>